--- a/alagir.html
+++ b/alagir.html
@@ -21,7 +21,7 @@
 		<link rel="stylesheet" type="text/css" href="style/style.css?13-1-8-23" media="screen,print" />
 		<link rel="stylesheet" type="text/css" href="style/template.css?13-1-8-23" media="screen" />
 		<link rel="stylesheet" type="text/css" href="style/menu.css?13-1-8-23" media="screen" />
-		<link rel="stylesheet" type="text/css" href="pcss/alagir.css?13-1-8-23-636953619621559931" media="screen,print" />
+		<link rel="stylesheet" type="text/css" href="pcss/alagir.css?13-1-8-23-636953625914243279" media="screen,print" />
 		<script type="text/javascript" src="res/jquery.js?13-1-8-23"></script>
 		<script type="text/javascript" src="res/x5engine.js?13-1-8-23" data-files-version="13-1-8-23"></script>
 		<script type="text/javascript">
@@ -29,6 +29,7 @@
 			x5engine.utils.currentPagePath = 'alagir.html';
 		</script>
 		
+		<script>(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)})(window,document,'script','//www.google-analytics.com/analytics.js','ga');ga('create', 'UA-141509583-1','auto');ga('send', 'pageview');</script>
 	</head>
 	<body>
 		<div id="imHeaderBg"></div>
@@ -36,7 +37,7 @@
 		<div id="imPage">
 			<div id="imHeader">
 				
-				<div id="imHeaderObjects"><div id="imHeader_imObjectTitle_02_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_2" class="" > <div id="imHeader_imCellStyleGraphics_2"></div><div id="imHeader_imCellStyle_2" ><div id="imHeader_imObjectTitle_02"><span id ="imHeader_imObjectTitle_02_text">0061.RU </span > </div></div></div></div><div id="imHeader_imObjectImage_03_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_3" class="" > <div id="imHeader_imCellStyleGraphics_3"></div><div id="imHeader_imCellStyle_3" ><a href="https://forms.gle/qy5bhnWKM43C2bRv6" target="_blank"><img id="imHeader_imObjectImage_03" src="images/zakaz1-1-.jpg" title="" alt="" /></a></div></div></div><div id="imHeader_imObjectImage_04_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_4" class="" > <div id="imHeader_imCellStyleGraphics_4"></div><div id="imHeader_imCellStyle_4" ><a href="tel:+79281237776"><img id="imHeader_imObjectImage_04" src="images/tel-1-.png" title="" alt="" /></a></div></div></div><div id="imHeader_imObjectImage_05_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_5" class="" > <div id="imHeader_imCellStyleGraphics_5"></div><div id="imHeader_imCellStyle_5" ><a href="javascript:x5engine.utils.emailTo('1224','u.r611@00','%25D0%2597%25D0%25B0%25D0%25BA%25D0%25B0%25D0%25B7%2520%25D1%2581%2520%25D1%2581%25D0%25B0%25D0%25B9%25D1%2582%25D0%25B0','')"><img id="imHeader_imObjectImage_05" src="images/email-1-.png" title="" alt="" /></a></div></div></div></div>
+				<div id="imHeaderObjects"><div id="imHeader_imObjectTitle_02_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_2" class="" > <div id="imHeader_imCellStyleGraphics_2"></div><div id="imHeader_imCellStyle_2" ><div id="imHeader_imObjectTitle_02"><span id ="imHeader_imObjectTitle_02_text">0061.RU </span > </div></div></div></div><div id="imHeader_imObjectImage_03_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_3" class="" > <div id="imHeader_imCellStyleGraphics_3"></div><div id="imHeader_imCellStyle_3" ><a href="https://forms.gle/qy5bhnWKM43C2bRv6" target="_blank"><img id="imHeader_imObjectImage_03" src="images/zakaz1-1-.jpg" title="" alt="" /></a></div></div></div><div id="imHeader_imObjectImage_04_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_4" class="" > <div id="imHeader_imCellStyleGraphics_4"></div><div id="imHeader_imCellStyle_4" ><a href="tel:+79281237776"><img id="imHeader_imObjectImage_04" src="images/tel-1-.png" title="" alt="" /></a></div></div></div><div id="imHeader_imObjectImage_05_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_5" class="" > <div id="imHeader_imCellStyleGraphics_5"></div><div id="imHeader_imCellStyle_5" ><a href="javascript:x5engine.utils.emailTo('2241','ru1.@0061','%25D0%2597%25D0%25B0%25D0%25BA%25D0%25B0%25D0%25B7%2520%25D1%2581%2520%25D1%2581%25D0%25B0%25D0%25B9%25D1%2582%25D0%25B0','')"><img id="imHeader_imObjectImage_05" src="images/email-1-.png" title="" alt="" /></a></div></div></div></div>
 			</div>
 			<a class="imHidden" href="#imGoToCont" title="Заголовок главного меню">Перейти к контенту</a>
 			<a id="imGoToMenu"></a><p class="imHidden">Главное меню:</p>
