--- a/imsitemap.html
+++ b/imsitemap.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html><!-- HTML5 -->
 <html prefix="og: http://ogp.me/ns#" lang="ru-RU" dir="ltr">
 	<head>
-		<title>Главная Карта Сайта - 0061.РУ</title>
+		<title>Главная Карта Сайта - 0061.RU</title>
 		<meta charset="utf-8" />
 		<!--[if IE]><meta http-equiv="ImageToolbar" content="False" /><![endif]-->
 		<meta name="author" content="Калуга Николай Владимирович" />
@@ -10,7 +10,7 @@
 		<meta property="og:type" content="website" />
 		<meta property="og:url" content="https://0061.ru/imsitemap.html" />
 		<meta property="og:title" content="Главная Карта Сайта" />
-		<meta property="og:site_name" content="0061.РУ" />
+		<meta property="og:site_name" content="0061.RU" />
 		<meta property="og:image" content="https://0061.ru/favImage.png" />
 		<meta property="og:image:type" content="image/png">
 		<meta property="og:image:width" content="500">
@@ -22,21 +22,21 @@
 		<link rel="stylesheet" type="text/css" href="style/style.css?13-1-8-23" media="screen,print" />
 		<link rel="stylesheet" type="text/css" href="style/template.css?13-1-8-23" media="screen" />
 		<link rel="stylesheet" type="text/css" href="style/menu.css?13-1-8-23" media="screen" />
-		<link rel="stylesheet" type="text/css" href="pcss/imsitemap.css?13-1-8-23-637160475938050000" media="screen,print" />
+		<link rel="stylesheet" type="text/css" href="pcss/imsitemap.css?13-1-8-23-637163701838512000" media="screen,print" />
 		<script type="text/javascript" src="res/jquery.js?13-1-8-23"></script>
 		<script type="text/javascript" src="res/x5engine.js?13-1-8-23" data-files-version="13-1-8-23"></script>
 		<script type="text/javascript">
 			window.onload = function(){ checkBrowserCompatibility('Ваш браузер не поддерживает функции, требуемые для визуализации этого Сайта.','Возможно, Ваш браузер не поддерживает функции, требуемые для визуализации этого Сайта.','[1]Обновите Ваш браузер[/1] или [2]продолжите процедуру [/2].','http://outdatedbrowser.com/'); };
 			x5engine.utils.currentPagePath = 'imsitemap.html';
 		</script>
-		<link rel="icon" href="favicon.png?13-1-8-23-637160475938050000" type="image/png" />
+		<link rel="icon" href="favicon.png?13-1-8-23-637163701838502000" type="image/png" />
 	</head>
 	<body>
 		<div id="imHeaderBg"></div>
 		<div id="imFooterBg"></div>
 		<div id="imPage">
 			<div id="imHeader">
-				<h1 class="imHidden">Главная Карта Сайта - 0061.РУ</h1>
+				<h1 class="imHidden">Главная Карта Сайта - 0061.RU</h1>
 				<div id="imHeaderObjects"><div id="imHeader_imObjectTitle_01_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_1" class="" > <div id="imHeader_imCellStyleGraphics_1"></div><div id="imHeader_imCellStyle_1" ><div id="imHeader_imObjectTitle_01"><span id ="imHeader_imObjectTitle_01_text">0061.RU | СОЗДАНИЕ  САЙТОВ ПО ВСЕЙ РОССИИ ЗА 1500 РУБЛЕЙ | +7(928)194-01-16 </span > </div></div></div></div><div id="imHeader_imTextObject_02_wrapper" class="template-object-wrapper"><div id="imHeader_imCell_2" class="" > <div id="imHeader_imCellStyleGraphics_2"></div><div id="imHeader_imCellStyle_2" ><div id="imHeader_imTextObject_02">
 	<div class="text-tab-content"  id="imHeader_imTextObject_02_tab0" style="">
 		<div class="text-inner">
@@ -75,7 +75,15 @@
 				</div>
 			</div>
 			<div id="imFooter">
-				<div id="imFooterObjects"></div>
+				<div id="imFooterObjects"><div id="imFooter_imTextObject_01_wrapper" class="template-object-wrapper"><div id="imFooter_imCell_1" class="" > <div id="imFooter_imCellStyleGraphics_1"></div><div id="imFooter_imCellStyle_1" ><div id="imFooter_imTextObject_01">
+	<div class="text-tab-content"  id="imFooter_imTextObject_01_tab0" style="">
+		<div class="text-inner">
+			<span class="ff1">Калуга Николай Владимирович | ИНН: 614210526858</span>
+		</div>
+	</div>
+
+</div>
+</div></div></div></div>
 			</div>
 		</div>
 		<span class="imHidden"><a href="#imGoToCont" title="Прочесть эту страницу заново">Назад к содержимому</a> | <a href="#imGoToMenu" title="Прочесть этот сайт заново">Назад к главному меню</a></span>
